--- a/projet.html
+++ b/projet.html
@@ -97,7 +97,8 @@
 
         <input type="submit" value="Submit" />
     </form>
-
+<footer><hr>
+<p>this is made by Nourelhouda Gharbi</p></footer>
 
 </body>
 
